# tam

./: README.md  tam_manifesto.md
crates/tam-cli/: Cargo.toml
crates/tam-cli/src/: cli.rs  client.rs  config.rs  ledger.rs  main.rs  serve.rs  serve_index.html  task.rs
crates/tam-cli/src/tui/: mod.rs  ui.rs
crates/tam-daemon/src/: agent.rs  daemon.rs  provider.rs
crates/tam-daemon/tests/: integration.rs
crates/tam-proto/src/: lib.rs
crates/tam-worktree/src/: discovery.rs  git.rs  init.rs  pretty.rs  worktree.rs
