[package]
name = "tam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal agent multiplexer — manage units of work, not just processes"
readme = "../../README.md"
keywords = ["ai", "agent", "terminal", "multiplexer", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "tam"
path = "src/main.rs"

[dependencies]
tam-proto = { workspace = true }
tam-daemon = { workspace = true }
tam-worktree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
vt100 = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
